manifests/snipe-it/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
  namespace: snipe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2.5-buster
        resources:
          requests:
            cpu: 128m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi       
        ports: 
        - containerPort: 6379

---
  
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: redis
  namespace: snipe
spec:
  ports:
    - port: 6379
      name: redis-port
      targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
