manifests/snipe-it/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snipe-ingress
  namespace: snipe
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "http-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
    - host: assets.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: snipe-svc
              port:
                number: 80
